fix(OpenCloseBox.jsx) show scroll bar when opening box if width overflow

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -42,19 +42,7 @@
   align-items: center; 
   background: #272727; 
   padding-right: 6px;
-}
-
-/*.box-button {
-	height: 22px;
-  width: 22px;
-  border-radius: 100%;
-  background: #E8E4E4;
-	z-index: 1000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: 6px;
-} */
+} 
 
 /* =================== Title */
 .box .title {
@@ -99,17 +87,20 @@
 
 /* =================== Content Container */
 .content-container {
-	width: 100%; 
+	width: 100%;  
 	background: pink;
+	border: 1px solid blue; /* makes content container take up space when closed */
 	transition: height 4s;
+	box-sizing: border-box;
 }
 
 .content-container-closing,
-.content-container-closed,
-.content-container-opening {
-	overflow: hidden; 
+.content-container-closed {
+	overflow: visible; 
 }
 
+.content-container-parent-opening,
+.content-container-opening,
 .content-container-open {
 	overflow: visible;
 }
